fixes button alignment on medium screens

--- a/public/stylesheets/portfolio.css
+++ b/public/stylesheets/portfolio.css
@@ -37,7 +37,7 @@ img{
     grid-column: 1 / span 4;
 }
 .right-project .buttons{
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 3;
 }
 
 /* Left Project */
@@ -66,7 +66,7 @@ img{
 }
 
 .left-project .buttons{
-    grid-column: 5 / span 2;
+    grid-column: 4 / span 3;
     text-align: right;
 }
 
